adição do h1 e h2 adição do parágrafo adição do link do video

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>type music</title>
 </head>
 <body>
-    
+<h1>venha descobrir e dar uma chance para músicas novas</h1>
+<h2>site de indicações de músicas</h2>
+<p>Sintonize-se com o Palco Musical, o seu novo portal para
+   descobrir o que há de melhor no mundo da música!
+Chega de procurar por horas a fio: nós fazemos o trabalho pesado para você
+, garimpando as melhores faixas, artistas e álbuns para todos os gostos.
+
+Seja você um fã de carteirinha procurando o próximo hit, alguém que ama explorar novos gêneros
+ ou simplesmente quer relaxar com uma playlist cuidadosamente selecionada, aqui é o seu lugar.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2jJZR6UY2T4?si=lVRvxFHRPJHq5mMo"
+ title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
