--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>type music</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>venha descobrir e dar uma chance para músicas novas</h1>
